sfSandBoxCode/force-app/main/default/objects/BSF_Eggs_Production__c/BSF_Eggs_Production__c.object-meta.xml
<CustomObject>
    <label>BSF Eggs  Production</label>
    <nameField>
        <label>BSF Eggs Production Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BSF Eggs  Production</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>