sfSandBoxCode/force-app/main/default/objects/BSF_Eggs_Production__c/fields/Pre_pupae_added_to_Cages_KG__c.field-meta.xml
<CustomField>
    <fullName>Pre_pupae_added_to_Cages_KG__c</fullName>
    <label>Pre-pupae added to Cages  (KG)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>