sfSandBoxCode/force-app/main/default/objects/BSF_Eggs_Production__c/fields/Weight_of_the_eggs__c.field-meta.xml
<CustomField>
    <fullName>Weight_of_the_eggs__c</fullName>
    <formula>Weight_of_the_pipe_Eggs__c - Weight_of_the_pipe__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weight of the eggs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>