sfSandBoxCode/force-app/main/default/objects/BSF_Eggs_Production__c/recordTypes/BSF_Eggs_Production_Input.recordType-meta.xml
<RecordType>
    <fullName>BSF_Eggs_Production_Input</fullName>
    <active>true</active>
    <label>BSF Eggs Production Input</label>
</RecordType>