sfSandBoxCode/force-app/main/default/objects/BSF_Eggs_Production__c/recordTypes/BSF_Eggs_Production_Output.recordType-meta.xml
<RecordType>
    <fullName>BSF_Eggs_Production_Output</fullName>
    <active>true</active>
    <label>BSF Eggs Production Output</label>
</RecordType>